--- a/index.css
+++ b/index.css
@@ -109,6 +109,6 @@
         padding-top: 0.2in;
     }
     #socials {
-        margin-top: 5.5vh;
+        margin-top: calc(var(--vh, 1vh) * 5.5);
     }
   }
