--- a/src/other/sim/index.css
+++ b/src/other/sim/index.css
@@ -3,10 +3,13 @@
 	padding: 0;
 }
 
+body {
+	display: flex;
+	flex-wrap: wrap;
+}
+
 #canvas {
-	position: absolute;
-	left: 0;
-	top: 0;
+	display: block;
 	background: #2c2f33;
 	z-index: -1;
 }
