--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,7 +29,7 @@ root {
 	margin: 5px;
 }
 
-.container {
+#container {
 	display: flex;
 	flex-direction: column;
 
@@ -72,11 +72,9 @@ root {
 }
 
 [class*="fa"]{
-	font-size: 1.5em;
 	width: 50px;
 	text-align: end;
 	text-decoration: none;
-	margin: 5px 2px;
 	transition: 1s;
 
 	color: var(--text-colour, #011627);
@@ -85,6 +83,11 @@ root {
 
 [class*="fa"]:hover {
 	opacity: 0.7;
+}
+
+[class*="fa-"]{
+	width: auto;
+	font-size: 2.2rem;
 }
 
 canvas {
